$Id: History,v 1.30 2000-03-02 17:53:58 gcosmo Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------

g3tog4-V01-00-00 02-Mar-2000 G.Cosmo
- included fixes by Ivana:
  o G3VolTable:
  - added tests VTD.size()>0
  - corrected G3VolTable::GetVTE() 
  - added back G3VolTable::Clear()
  o G3Pos:
  - added G3Pos::GetOnly() 
  o G3Division:
  - corrected G3Division::CreateSolid() for
    the case ( shape == "TUBS") && ( fIAxis == 1 )
- fixed warnings for extraneous semicolons on DEC (ISO mode).
- syncronized with HEAD (mainly CVS headers changed from the recent
  ISO-ANSI C++ migration.

06-Dec-1999 W.Lockman
- removed G3fillParams.cc
- G3Eletable.cc: cast double Z to int
- added G3toG4Debug() global function (yuch)
- removed G4.cc.omit
- made sure all header files are protected with #ifndef ... #endif
- G3toG4BuildTree.cc: avoid placement of the top-level logical volume

g3tog4-V00-01-cand03 05-Dec-1999  G.Cosmo
- Merged HEAD of main trunk with tag "wsl-991205" which now includes
  updates by Ivana&Pedro, as well as RW->G4RW migration, STL map
  migration and integration work by B.Lockman.

g3tog4-br4_0_1fixes-iv2-99nov11    12-Nov-1999  J. Apostolakis
- Tag of new fixes from consolidation of changes by Ivana & Pedro,
  as these fixes were on November 11th, at 15:00

g3tog4-br4_0_1fixes-iv1-99nov02    12-Nov-1999  J. Apostolakis
- Tag of fixes from consolidation of changes by Ivana & Pedro,
  as these fixes were on November 2nd. 

Summary of changes to be added here (to be obtained from Ivana, Pedro)

g3tog4-4_0_1-fixes-branch  Branch for fixes 
- Changes introduced and tested by Ivana Hrivnacova and Pedro Arce 
  based on geant4-00-01

g3tog4-V00-01-02 22-Nov-1999 Lockman
- g3test.F renamed to g3test.F.save
- G3RotTable::get now returns a pointer to a G4RotationMatrix thru an upcast
- G4BuildTree : now get G4RotationMatrix* rather than G3toG4Rotationmatrix*
